# friasApp

./: .gitignore  .gitmodules  CMakeLists.txt  config.json  drogon_ctl
src/: CMakeLists.txt  Controller.cc  Controller.h  DigestAuthFilter.cc  DigestAuthFilter.h  Md5.cc  aog.cc  aog.h  exampleclass.hpp  main.cc  main.cpp  version.h
src/filters/: DigestAuthFilter.h
src/models/: Courses.cc  Courses.h  Menu.cc  Menu.h  Menus.cc  Menus.h  MenusConfig.cc  MenusConfig.h  Users.cc  Users.h  model.json  model.sqlite3
src/views/: AdminView.csp  EditView.csp  ListUsers.csp  MenusView.csp  PrintView.csp
static/: index.html
static/css/: heroic-features.css  print.css
test/: CMakeLists.txt
test/test_csa/: CMakeLists.txt  testcsa.cpp
test/test_csv/: CMakeLists.txt  testcsv.cpp
web/: index.html
